TM-12275 Add filtering tags  feature

--- a/web-app/tds/web-app/app-js/modules/dependencies/components/view-grid/dependencies-view-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/dependencies/components/view-grid/dependencies-view-grid.component.html
@@ -78,7 +78,7 @@
 				<tds-asset-tag-selector #tagSelector
 				                        [tagList]="tagList"
 				                        [viewFilterModel]="column.filter"
-				                        (valueChange)="onTagFilterChange(column, $event)">
+				                        (valueChange)="onTagFilterChange(column.field, $event)">
 				</tds-asset-tag-selector>
 			</ng-template>
 
