--- a/web-app/tds/web-app/css/page/module/dependencies/dependencies-view-grid-component.sass
+++ b/web-app/tds/web-app/css/page/module/dependencies/dependencies-view-grid-component.sass
@@ -4,6 +4,8 @@
     width: unset
 
   .asset-tag-selector-component
+    .k-multiselect-wrap
+      border: 0
     .k-widget
       div.k-multiselect-wrap
         kendo-taglist
@@ -21,6 +23,9 @@
     margin-top: 10px
     min-height: 100%
     position: relative
+    .k-filter-row
+      td
+        vertical-align: top
 
     td
       height: 30px
@@ -35,6 +40,7 @@
       .k-textbox
         padding: 6px 22px 6px 6px
         height: 31px
+        border-width: 0
       .k-filtercell-operator
         position: absolute
         right: -5px
