--- a/web-app/tds/web-app/app-js/modules/user/components/date-timezone/user-date-timezone.component.html
+++ b/web-app/tds/web-app/app-js/modules/user/components/date-timezone/user-date-timezone.component.html
@@ -1,20 +1,50 @@
-<form id="userTimezoneForm">
-    <div style="padding: 5px">
-        <b>Time Zone:</b>
-        <select id="dateTimezone" name="timezone"></select>
-        <b style="padding-left: 30px">Date Format:</b>
-        <select id="datetimeFormat" name="datetimeFormat"></select>
+<div tds-autofocus tds-handle-escape (escPressed)="cancelCloseDialog()" class="modal-content user-preferences-component">
+    <div class="modal-header">
+        <button (click)="cancelCloseDialog()" type="button" class="close" aria-label="Close"><span aria-hidden="true">×</span></button>
+        <h4 class="modal-title">{{personName}} Preferences</h4>
     </div>
+    <div class="modal-body">
+        <form id="userTimezoneForm">
+            <div style="padding: 5px">
+                <b>Time Zone:</b>
+                <select id="dateTimezone" name="timezone"></select>
+                <b style="padding-left: 30px">Date Format:</b>
+                <select id="datetimeFormat" name="datetimeFormat"></select>
+            </div>
 
-    <img id="timezoneImage" src="../images/world_map_800.jpg" width="800" height="400" usemap="#timezoneMap"/>
-    <img class="timezone-pin" src="../images/pin.png" style="padding-top: 4px;" />
+            <img id="timezoneImage" src="../images/world_map_800.jpg" width="800" height="400" usemap="#timezoneMap"/>
+            <img class="timezone-pin" src="../images/pin.png" style="padding-top: 4px;" />
 
-    <map name="timezoneMap" id="timezoneMap">
-        <div *ngFor="let area of mapAreas">
-            <area *ngFor="let poly of area.polys" shape="poly" coords="{{poly.join(',')}}"/>
+            <map name="timezoneMap" id="timezoneMap">
+                <div *ngFor="let area of mapAreas">
+                    <area *ngFor="let poly of area.polys"
+                          [attr.data-timezone]="area['name']"
+                          [attr.data-country]="area['country']"
+                          [attr.data-pin]="area['pin']?.join(',')"
+                          [attr.data-offset]="area['offset']"
+                          shape="poly"
+                          coords="{{poly?.join(',')}}"
+                    />
+                    <area *ngFor="let rect of area.rects"
+                          [attr.data-timezone]="area['name']"
+                          [attr.data-country]="area['country']"
+                          [attr.data-pin]="area['pin']?.join(',')"
+                          [attr.data-offset]="area['offset']"
+                          shape="rect"
+                          coords="{{rect?.join(',')}}"
+                    />
+                </div>
+            </map>
+        </form>
+
+        <div class="modal-footer form-group-center">
+            <button type="button" (click)="onSaveApiAction()" class="btn btn-primary pull-left">
+                <span class="fa fa-fw fa-floppy-o"></span> Save
+            </button>
+            <button (click)="cancelCloseDialog()" type="button" class="btn btn-default pull-right">
+                <span class="glyphicon glyphicon-ban-circle"></span>
+                <span>{{'GLOBAL.CLOSE' | translate }}</span>
+            </button>
         </div>
-    </map>
-    <div class="buttons">
-        <span class="button"><input type="button" class="save" value="Save" > </span>
     </div>
-</form>
+</div>
