TM-12269 Fixed Dialgo size

--- a/web-app/tds/web-app/css/page/index.sass
+++ b/web-app/tds/web-app/css/page/index.sass
@@ -32,3 +32,4 @@
 @import "module/assetTags/tag-list.component"
 @import "module/taskManager/task-actions.component"
 @import "module/user/user-preferences.component"
+@import "module/user/datetime-modal.component"
