--- a/web-app/tds/web-app/css/style.sass
+++ b/web-app/tds/web-app/css/style.sass
@@ -32,6 +32,7 @@
 @import "shared/components/date-range-selector.component"
 @import "shared/components/password-change.component"
 @import "shared/components/number-control.component"
+@import "shared/components/button.component"
 // Specific Module Layout/Components
 @import "shared/directives/tds-ui-prompt"
 @import "shared/directives/tds-ui-modal-decorator"
