--- a/web-app/tds/web-app/css/page/module/assetExplorer/report-config.sass
+++ b/web-app/tds/web-app/css/page/module/assetExplorer/report-config.sass
@@ -7,7 +7,7 @@ section.page-asset-explorer-config
       margin-top: 8px
       margin-right: 19px
   div.box-body
-    padding: 0px
+    padding-left: 0
   div.nav-tabs-custom
     ul.nav-tabs
       li.active
