--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-show/asset-explorer-view-show.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-show/asset-explorer-view-show.component.html
@@ -1,4 +1,4 @@
-<div class="content body">
+<div class="asset-explorer-view-show-component content body">
     <section class="page-asset-explorer-config">
         <div>
             <div class="btn-group"
