--- a/web-app/tds/web-app/app-js/modules/fieldSettings/components/number/number-configuration-popup.component.html
+++ b/web-app/tds/web-app/app-js/modules/fieldSettings/components/number/number-configuration-popup.component.html
@@ -6,7 +6,7 @@
 <div class="modal-content selectlist-configuration-popup">
     <div class="modal-header">
         <button (click)="cancelCloseDialog()" type="button" class="close" aria-label="Close"><span aria-hidden="true">×</span></button>
-        <h4 class="modal-title">String Configuration - {{field.field}}</h4>
+        <h4 class="modal-title">Number Configuration - {{field.field}}</h4>
     </div>
     <div class="modal-body">
         <form #templateForm="ngForm">
