--- a/web-app/tds/web-app/css/legacy/support/jqDialog.sass
+++ b/web-app/tds/web-app/css/legacy/support/jqDialog.sass
@@ -56,7 +56,7 @@
             margin-right: 5px !important
             color: $color-material--blue1
             span.ui-icon
-                background-image: url(../../../assets/images/ui-icons_ffffff_256x240.png)
+                background-image: url(assets/images/ui-icons_ffffff_256x240.png)
                 font-size: 17px !important
                 margin-right: 2px !important
         button.ui-dialog-titlebar-close:hover
