TM-12819 remove padding for tags filter

--- a/web-app/tds/web-app/css/page/module/assetExplorer/asset-explorer-view-grid.component.sass
+++ b/web-app/tds/web-app/css/page/module/assetExplorer/asset-explorer-view-grid.component.sass
@@ -3,6 +3,9 @@
     tr
       height: unset!important
       td
+        .asset-tag-selector-component
+          .k-multiselect
+            padding: 0
         .has-feedback
           input.form-control
             padding: 2px 12px
