--- a/web-app/tds/web-app/app-js/modules/user/components/view-edit/user-view-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/user/components/view-edit/user-view-edit.component.html
@@ -1,12 +1,12 @@
-<div tds-autofocus tds-handle-escape (escPressed)="cancelCloseDialog()" class="modal-content user-preferences-component">
+<div tds-autofocus tds-handle-escape (escPressed)="cancelCloseDialog()" class="modal-content user-view-edit-component">
     <div class="modal-header">
         <button (click)="cancelCloseDialog()" type="button" class="close" aria-label="Close"><span aria-hidden="true">×</span></button>
         <h4 *ngIf="currentUserInfo" class="modal-title">{{currentUserInfo.firstName}} Preferences</h4>
     </div>
     <div class="modal-body">
         <form (ngSubmit)="submitPreferences($event)">
-            <div id="personDialog" title="Edit Person" class="static-dialog old-legacy-content">
-                <div class="dialog">
+            <div id="personDialog" title="Edit Person" class="static-dialog">
+                <div class="dialog" style="border: 1px solid #63a242">
                     <table>
                         <tbody>
                             <tr>
@@ -18,7 +18,7 @@
                                     <label for="firstNameId"><b>First Name:&nbsp;<span style="color: red">*</span></b></label>
                                 </td>
                                 <td valign="top" class="value">
-                                    <input type="text" maxlength="64" id="firstNameId" name="firstName" value="{{currentUserInfo.firstName}}"/>
+                                    <input type="text" maxlength="64" id="firstNameId" name="firstName" [(ngModel)]="personModel.firstName"/>
                                 </td>
                             </tr>
 
@@ -36,7 +36,7 @@
                                     <label for="middleNameId">Middle Name:</label>
                                 </td>
                                 <td valign="top" class="value">
-                                    <input type="text" maxlength="64" id="middleNameId" name="middleName" value="{{currentUserInfo.middleName}}"/>
+                                    <input type="text" maxlength="64" id="middleNameId" name="middleName" [(ngModel)]="personModel.middleName"/>
                                 </td>
                             </tr>
 
@@ -45,7 +45,7 @@
                                     <label for="lastNameId">Last Name:</label>
                                 </td>
                                 <td valign="top" class="value">
-                                    <input type="text" maxlength="64" id="lastNameId" name="lastName" value="{{currentUserInfo.lastName}}"/>
+                                    <input type="text" maxlength="64" id="lastNameId" name="lastName" [(ngModel)]="personModel.lastName"/>
                                 </td>
                             </tr>
 
@@ -54,7 +54,7 @@
                                     <label for="nickNameId">Nick Name:</label>
                                 </td>
                                 <td valign="top" class="value">
-                                    <input type="text" maxlength="64" id="nickNameId" name="nickName" value="{{currentUserInfo.nickName}}"/>
+                                    <input type="text" maxlength="64" id="nickNameId" name="nickName" [(ngModel)]="personModel.nickName"/>
                                 </td>
                             </tr>
                             <tr class="prop">
@@ -62,7 +62,7 @@
                                     <label for="titleId">Title:</label>
                                 </td>
                                 <td valign="top" class="value">
-                                    <input type="text" maxlength="34" id="titleId" name="title" value="{{currentUserInfo.title}}"/>
+                                    <input type="text" maxlength="34" id="titleId" name="title" [(ngModel)]="personModel.title"/>
                                 </td>
                             </tr>
                             <tr class="prop">
@@ -70,7 +70,7 @@
                                     <label for="emailId">Email:</label>
                                 </td>
                                 <td valign="top" class="value">
-                                    <input type="text" maxlength="64" id="emailId" name="email" value="{{currentUserInfo.email}}"/>
+                                    <input type="text" maxlength="64" id="emailId" name="email" [(ngModel)]="personModel.email"/>
                                 </td>
                             </tr>
                             <tr class="prop">
@@ -78,7 +78,7 @@
                                     <label>Start Page:</label>
                                 </td>
                                 <td valign="top" class="value">
-                                    <select name="startPage" value="{{editableUserPreferences.START_PAGE}}" id="startPageId">
+                                    <select name="startPage" [(ngModel)]="editableUserPreferences.START_PAGE" id="startPageId">
                                         <option *ngFor="let option of startPageOptions" value="{{option}}">{{option}}</option>
                                     </select>
                                 </td>
@@ -89,7 +89,7 @@
                                     <label for="powerTypeId">Power In:</label>
                                 </td>
                                 <td valign="top" class="value">
-                                    <select name="powerType" value="{{editableUserPreferences.CURR_POWER_TYPE}}" id="powerTypeId">
+                                    <select name="powerType" [(ngModel)]="editableUserPreferences.CURR_POWER_TYPE" id="powerTypeId">
                                         <option value="Watts">Watts</option>
                                         <option value="Amps">Amps</option>
                                     </select>
@@ -97,11 +97,12 @@
                             </tr>
                         </tbody>
                     </table>
+                    <tds-password-change [passwordChangeModel]="passwordChangeModel"></tds-password-change>
                 </div>
             </div>
             <div class="buttons">
                 <span class="button"><input type="submit" class="edit" value="Update"/></span>
-                <span class="button"><input type="button" class="delete" onclick="jQuery('#personDialog').dialog('close')" value="Cancel" /></span>
+                <span class="button"><input type="button" class="delete" (click)="cancelCloseDialog()" value="Cancel" /></span>
             </div>
         </form>
     </div>
