--- a/web-app/tds/web-app/css/style.sass
+++ b/web-app/tds/web-app/css/style.sass
@@ -30,6 +30,7 @@
 @import "shared/components/aka.component"
 @import "shared/components/connector.component"
 @import "shared/components/date-range-selector.component"
+@import "shared/components/password-change.component"
 // Specific Module Layout/Components
 @import "shared/directives/tds-ui-prompt"
 @import "shared/directives/tds-ui-modal-decorator"
