TM-12004 fixing issue with image for create dialog.

--- a/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
+++ b/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
@@ -253,7 +253,7 @@
     &::before
       content: ''
       cursor: pointer
-      background-image: url("/tdstm/static/images/swapicon.png")
+      background-image: url("/tdstm/images/swapicon.png")
       background-position: center center
       background-repeat: no-repeat
       background-size: 16px 16px
