--- a/web-app/tds/web-app/app-js/modules/user/components/preferences/user-preferences.component.html
+++ b/web-app/tds/web-app/app-js/modules/user/components/preferences/user-preferences.component.html
@@ -1,4 +1,4 @@
-<div tds-autofocus tds-handle-escape (escPressed)="cancelCloseDialog()" class="modal-content user-preferences-component">
+<div tds-autofocus class="modal-content user-preferences-component">
     <div class="modal-header">
         <button (click)="cancelCloseDialog()" type="button" class="close" aria-label="Close"><span aria-hidden="true">×</span></button>
         <h4 class="modal-title">{{personName}} Preferences</h4>
