--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-show/asset-explorer-view-show.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-show/asset-explorer-view-show.component.html
@@ -2,12 +2,23 @@
     <section class="page-asset-explorer-config">
         <div>
             <div class="btn-group" *ngIf="model.id && (model.isOwner || (model.isSystem && (isSystemSaveAvailable(true) && isSystemSaveAvailable(false))));else saveButton">
-                <button type="button" id="btnSaveAs" *ngIf="!model.isOwner" [disabled]="!isSaveAsAvailable()" class="btn" [ngClass]="{'btn-default':!isDirty() || !isSaveAsAvailable(),'btn-success':isDirty() && isSaveAsAvailable()}"
-                    (click)="onSaveAs()">
-                    <i class="fa fa-fw fa-floppy-o"></i> {{ 'GLOBAL.SAVE_AS' | translate }}</button>
-                <button type="button" id="btnSave" *ngIf="model.isOwner" [disabled]="!isSaveAvailable()" class="btn" [ngClass]="{'btn-default':!isDirty() || !isSaveAvailable(),'btn-success':isDirty() && isSaveAvailable()}"
-                    (click)="onSave()">
-                    <i class="fa fa-fw fa-floppy-o"></i> {{ 'GLOBAL.SAVE' | translate }}</button>
+
+                <button type="button" id="btnSave" *ngIf="model.isOwner || (model.isSystem && isSystemSaveAvailable(true)) "
+                        [disabled]="!isSaveAvailable()"
+                        class="btn"
+                        [ngClass]="{'btn-default':!isDirty() || !isSaveAvailable(),'btn-success':isDirty() && isSaveAvailable()}"
+                        (click)="onSave()">
+                            <i class="fa fa-fw fa-floppy-o"></i> {{ 'GLOBAL.SAVE' | translate }}
+                </button>
+
+                <button type="button" id="btnSaveAs" *ngIf="!model.isOwner && !model.isSystem"
+                        [disabled]="!isSaveAsAvailable()"
+                        class="btn"
+                        [ngClass]="{'btn-default':!isDirty() || !isSaveAsAvailable(),'btn-success':isDirty() && isSaveAsAvailable()}"
+                        (click)="onSaveAs()">
+                            <i class="fa fa-fw fa-floppy-o"></i> {{ 'GLOBAL.SAVE_AS' | translate }}
+                </button>
+
                 <button type="button" class="btn dropdown-toggle" [ngClass]="{'btn-default':!isDirty() || !isSaveAsAvailable(),'btn-success':isDirty() && isSaveAsAvailable()}"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span class="caret"></span>
