TM-13316 Fix ready to go.

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/bulk-change/components/bulk-change-edit/bulk-change-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/bulk-change/components/bulk-change-edit/bulk-change-edit.component.html
@@ -115,8 +115,8 @@
                                             *ngIf="canShowControl('List', rowIndex)"
                                             name="optionList"
                                             [(value)]="editRows.selectedValues[rowIndex].value"
-                                            [valueField]="'id'"
-                                            [textField]="'text'"
+                                            [valueField]=""
+                                            [textField]=""
                                             [data]="listOptions[this.editRows.selectedValues[rowIndex].field.id]">
                                     </kendo-dropdownlist>
 
