TM-12960 - Added logic to display new pipes on asset lists.

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/bulk-change/components/bulk-change-edit/bulk-change-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/bulk-change/components/bulk-change-edit/bulk-change-edit.component.html
@@ -80,7 +80,11 @@
 
                                     <!-- Number Fields -->
                                     <tds-number-control *ngIf="canShowControl('Number', rowIndex)"
-                                                    [(value)]="editRows.selectedValues[rowIndex].value"></tds-number-control>
+                                                        [(value)]="editRows.selectedValues[rowIndex].value"
+                                                        [format]="editRows.selectedValues[rowIndex].field.constraints?.format"
+                                                        [minRange]="editRows.selectedValues[rowIndex].field.constraints?.minRange"
+                                                        [maxRange]="editRows.selectedValues[rowIndex].field.constraints?.maxRange">
+                                    </tds-number-control>
 
                                     <!-- Date Fields -->
                                     <tds-date-control *ngIf="canShowControl('Date', rowIndex)"
