--- a/web-app/tds/web-app/css/page/module/assetExplorer/asset-explorer-view-grid.component.sass
+++ b/web-app/tds/web-app/css/page/module/assetExplorer/asset-explorer-view-grid.component.sass
@@ -6,6 +6,9 @@
         .asset-tag-selector-component
           .k-multiselect
             padding: 0
+            top: 0
+            .k-multiselect-wrap
+              min-height: unset
         .has-feedback
           input.form-control
             padding: 2px 12px
@@ -81,8 +84,7 @@
       justify-content: flex-end
       padding-right: 8px
       .component-action-reload
-        margin-left: 12px
-        cursor: pointer
+        margin-right: 0
 
     .bulkchange-section
       padding-left: 8px
