--- a/web-app/tds/web-app/css/shared/components/button.component.sass
+++ b/web-app/tds/web-app/css/shared/components/button.component.sass
@@ -1,31 +1,42 @@
 $tds-button-icon-flat-color: #666
 
-@mixin tds-button-icon-mixin()
-  font-size: 16px
+@mixin tds-button-no-outline-mixin()
+  border: 0
+  background-color: transparent
+  outline: 0
 
 .tds-button
   i
-    @include tds-button-icon-mixin()
+    font-size: 16px
 
+// style for buttons contained in a grid row
+.tds-button-in-row
+  @include tds-button-no-outline-mixin()
+  padding: 0 2px
+  .tds-button
+    i
+      position: relative
+      vertical-align: middle
+
+// group a set of tds-buttons
 .tds-button-set
   align-items: center
   display: flex
   justify-content: center
   position: relative
-  .tds-button-flat
-    border: 0
-    background-color: transparent
-    margin: 0
-    outline: 0
-    padding: 0 2px
+  .tds-button-in-row
+    .tds-button
+      i
+        color: $tds-button-icon-flat-color
+
+// icon used like button, used in add favorites, edit configuration, ...
+.tds-button-icon
+  @include tds-button-no-outline-mixin()
+  vertical-align: middle
+  margin: 0 10px
+  .tds-button
     i
-      @include tds-button-icon-mixin()
-      color: $tds-button-icon-flat-color
-      position: relative
-      top: 0
-      transition: top 0.2s linear
-      &:hover
-        top: 2px
+      font-size: 22px
 
 // Match the first tds-button with an icon set belonging to a btn-group
 .btn-group > [tds-button]:not([icon=""]):first-child()
