TM-12819 Move change on grid icons size to be local to the asset list

--- a/web-app/tds/web-app/css/page/module/assetExplorer/asset-explorer-view-grid.component.sass
+++ b/web-app/tds/web-app/css/page/module/assetExplorer/asset-explorer-view-grid.component.sass
@@ -1,5 +1,12 @@
 .asset-explorer-view-grid-component
+  $grid-font-icon-size: 20px
+  .k-grid-pager
+    .k-icon
+      font-size: $grid-font-icon-size
+
   .k-grid-header
+    .k-icon
+      font-size: $grid-font-icon-size
     tr
       height: unset!important
       td
