--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
@@ -119,25 +119,25 @@
 			             let-isIssue="dataItem.taskAndCommentFlags.issue">
 				<div class="tds-button-set">
 					<button tds-button
-					        class="tds-button-in-row"
+					        class="tds-button-in-row btn-action"
 					        (click)="showAssetEditView(dataItem, rowIndex)"
 					        icon="edit"
 					        title="Edit Asset">
 					</button>
 					<button tds-button
-					        class="tds-button-in-row"
+					        class="tds-button-in-row btn-action"
 					        (click)="isIssue ? showTask(dataItem, rowIndex) : createTask(dataItem, rowIndex)"
 					        [icon]="isIssue ? 'list-alt' : 'file-text-o'"
 					        [title]="isIssue ? 'List existing Tasks' : 'Create a Task'">
 					</button>
 					<button tds-button
-					        class="tds-button-in-row"
+					        class="tds-button-in-row btn-action"
 					        (click)="isComment ? showComment(dataItem, rowIndex) : createComment(dataItem, rowIndex)"
 					        [icon]="isComment ? 'comments' : 'comment'"
 					        [title]="isComment ? 'List existing Comments' : 'Create a Comment'">
 					</button>
 					<button tds-button
-					        class="tds-button-in-row"
+					        class="tds-button-in-row btn-action"
 					        (click)="showAssetCloneView(dataItem, rowIndex)"
 					        icon="clone"
 					        title="Clone Asset">
