--- a/web-app/tds/web-app/app-js/modules/user/components/date-timezone/user-date-timezone.component.html
+++ b/web-app/tds/web-app/app-js/modules/user/components/date-timezone/user-date-timezone.component.html
@@ -1,7 +1,7 @@
 <div tds-autofocus tds-handle-escape (escPressed)="cancelCloseDialog()" class="modal-content datetime-modal-component">
     <div class="modal-header">
         <button (click)="cancelCloseDialog()" type="button" class="close" aria-label="Close"><span aria-hidden="true">×</span></button>
-        <h4 class="modal-title">{{personName}} Preferences</h4>
+        <h4 class="modal-title">{{personName}} Date and Timezone</h4>
     </div>
     <div class="modal-body">
         <form id="userTimezoneForm">
@@ -44,7 +44,7 @@
             </map>
 
             <img id="timezoneImage" src="../images/world_map_800.jpg" width="800" height="400" usemap="#timezoneMap"/>
-            <img class="timezone-pin" src="../images/pin.png" style="padding-top: 4px;" />
+            <img class="timezone-pin" src="../images/pin.png" style="padding-top: 4px; display: none;" />
 
         </form>
 
